--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 contourpy==1.0.7
 cycler==0.11.0
 fonttools==4.39.4
+importlib-resources==6.0.0
 kiwisolver==1.4.4
 matplotlib==3.7.1
 mypy==1.3.0
 mypy-extensions==1.0.0
 numpy==1.24.3
 packaging==23.1
+pandas==2.0.3
 Pillow==9.5.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2023.3
 scipy==1.10.1
 six==1.16.0
 tomli==2.0.1
 typing_extensions==4.5.0
+tzdata==2023.3
+zipp==3.16.2
